testsuite/tests/ghc-regress/typecheck/should_fail/tcfail058.hs
module ShouldFail where
import Array

-- !!! inadvertently using => instead of ->

f :: (Array a) => a -> b
f x = x
